--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- PWA Builder -->
+
     <link rel="manifest" href="manifest.json" />
     <script>
       navigator.serviceWorker.register("service-worker.js");
     </script>
-    <title>Projeto com PWA</title>
+
+    <!-- TailwindCSS -->
+    <link href="/src/styles.css" rel="stylesheet" />
+
+    <title>M8 Sistemas PDI</title>
   </head>
   <body>
     <div id="root"></div>
